samples/_failures_safe/1761728586_a2a551_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84baa3fb.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_84baa3fb.c:176:16: error: ‘is_’ undeclared (first use in this function)
  176 |     } else if (is_
      |                ^~~
./samples/SAFE/__tmp_84baa3fb.c:176:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_84baa3fb.c:176:19: error: expected ‘)’ at end of input
  176 |     } else if (is_
      |               ~   ^
      |                   )
./samples/SAFE/__tmp_84baa3fb.c:176:5: error: expected declaration or statement at end of input
  176 |     } else if (is_
      |     ^
